--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
 
   </head>
   <body>
+    <div id="loading-bg">
     <div id="global-container">
       <div id="container">
         <div class="mobile-menu__cover"></div>
@@ -259,7 +260,7 @@
     <div class="cover-slide hover-darken">
       <img class="img-zoom" src="images/image-1.jpg" alt="" />
     </div> -->
-
+  </div>
     <script src="scripts/pace.js"></script>
     <script src="scripts/vendors/swiper.min.js"></script>
     <script src="scripts/vendors/gsap.min.js"></script>
